@@ -1,5 +1,10 @@
 2007-05-29  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 04260] Warning (Re: road to 0.5.2)
+	* main.c, display.c: delete unused macros, change void to static void.
+
+2007-05-29  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 04259] long long (Re: road to 0.5.2)
 	* Makefile.in, aclocal.m4: move 'gc' from $LIBS to $LIBGC.
 	* configure: regenerated.
@@ -8873,4 +8878,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.991 2007/05/29 12:01:04 inu Exp $
+$Id: ChangeLog,v 1.992 2007/05/29 12:07:02 inu Exp $
